# HP_ReducingBlockSparsity

./: .gitignore  CMakeLists.txt  Outputparser.ipynb  PaToH.log.Fri_Sep_19_11-53-50_2025  PaToH.log.Fri_Sep_19_11-54-45_2025  README.md  bash_script.sh  experiment_results.xlsx  main.cc  output.txt
.ipynb_checkpoints/: Outputparser-checkpoint.ipynb
include/HPNBM/: hp.h  junk.h  mask_generator.h  mm.h  reorder.h  util.h
src/HPNBM/: hp.cpp  junk.cpp  mask_generator.cpp  mm.cpp  reorder.cpp  util.cpp
